# fastbuf

./: '  Cargo.toml  README.md
benches/: benchmark.rs  compare_write_vs_try_write.rs  sandbox.rs
src/: buffer.rs  chunk.rs  fast_slice.rs  lib.rs  tests.rs  traits.rs
