[package]
name = "fastbuf"
version = "0.40.0"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "single-thread-oriented very fast byte buffer"
repository = "https://github.com/Bruce0203/fastbuf"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
default = ["std", "alloc"]
alloc = []
const-trait = []
std = []

[profile.bench]
strip = true
lto = true
codegen-units = 1

[dependencies]
konst = { version = "0.3.15", default-features = false, features = ["cmp"] }
