[package]
name = "fastbuf"
version = "0.44.0"
edition = "2021"
author = "Bruce0203 <brucefreedy@gmail.com>"
description = "single-thread-oriented very fast byte buffer"
repository = "https://github.com/Bruce0203/fastbuf"
license = "MIT"
include = [
    "**/*.rs",
    "Cargo.toml",
]

[features]
default = ["std", "const-trait"]
std = []
const-trait = []
impl_copy_for_buffer = []
